# gardening-app

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc  README.md  compose.yaml  openapi.json  tests  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.jenkins/: pipeline.groovy
api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  tox.ini
api/app/: batch_job.py  data_structures.py  main.py  settings.py  userprofile.py
api/tests/: conftest.py  test_userprofile.py
graphql/: package-lock.json  package.json  plants.js  server.js
ui/: .dockerignore  Dockerfile  README.md  compose.yaml  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  vite.config.ts
ui/public/: config.js
ui/src/: app.tsx  env.ts  index.tsx  tri.app.config.ts
ui/src/features/beds/: bed-list.tsx  bed-plant.tsx  bed-square.tsx  garden-bed.tsx  input-bed.tsx
ui/src/features/plants/: input-plant.tsx  plant-image.tsx  plant-list.tsx  use-image.tsx
ui/src/features/user-info/: user-info.tsx
ui/src/interface/: api.ts  base.ts  common.ts  configuration.ts  index.ts
ui/src/pages/: home.test.tsx  home.tsx  pre-login.tsx
